--- a/src/app/components/modulo-review-suppliers/modulo-review-suppliers.component.html
+++ b/src/app/components/modulo-review-suppliers/modulo-review-suppliers.component.html
@@ -8,7 +8,9 @@
       <li class="media align-items-center" *ngFor="let supplier of suppliers">
         <div class="media-body d-flex align-items-center">
           <div class="flex-1">
-            <div class="media-heading">{{supplier.reference}} </div>
+            <div class="media-heading">{{supplier.reference}} 
+              <span *ngIf="supplier.sendReview" class="badge badge-blue badge-pill">Envoyer</span>
+            </div>
             <small class="text-muted">{{supplier.email}}</small>
           </div>
           <button class="btn btn-sm btn-outline-secondary btn-rounded" (click)="onMail(supplier.id)">Envoyer un mail</button>
