--- a/src/app/pages/supplier/articles/add-article/add-article.component.html
+++ b/src/app/pages/supplier/articles/add-article/add-article.component.html
@@ -54,7 +54,7 @@
             <div class="col-sm-6">
               <div class="form-group mb-2">
                 <label>Prix de vente UF</label>
-                <input class="form-control" onkeypress="return false;" formControlName="pricePro" type="number" id="price_pro" 
+                <input class="form-control" onkeypress="return false;" min="0" formControlName="pricePro" type="number" id="price_pro" 
                        placeholder="">
                 <p class="help-block font-11"></p>
               </div>
@@ -62,7 +62,7 @@
             <div class="col-sm-6">
               <div class="form-group mb-2">
                 <label>Marge</label>
-                <input class="form-control" formControlName="margePro" (ngModelChange)="onChangeMarge($event)" type="number" id="marge" 
+                <input class="form-control" formControlName="margePro" min="0" (ngModelChange)="onChangeMarge($event)" type="number" id="marge" 
                        placeholder="Ajouter une marge">
                 <div *ngIf="f.margePro.errors && f.margePro.dirty">
                   <label id="marge-error" class="help-block error">Ce champ est obligatoire.</label>
@@ -78,7 +78,7 @@
         <div class="col-md-6">
           <div class="form-group mb-2">
             <label>Prix R.</label>
-            <input class="form-control" onkeypress="return false;" formControlName="priceDealer" type="number" id="price_dealer" 
+            <input class="form-control" onkeypress="return false;" min="0" formControlName="priceDealer" type="number" id="price_dealer" 
                    placeholder="">
             <div *ngIf="f.priceDealer.errors && f.priceDealer.dirty">
               <label id="price-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
@@ -88,7 +88,7 @@
         <div class="col-md-6">
           <div class="form-group mb-2">
             <label>Marge R.</label>
-            <input class="form-control" formControlName="margeDealer" type="number" (ngModelChange)="onChangeMargeDealer($event)" id="marge_dealer"
+            <input class="form-control" formControlName="margeDealer" min="0" type="number" (ngModelChange)="onChangeMargeDealer($event)" id="marge_dealer"
                    placeholder="Ajouter une marge">
             <div *ngIf="f.margeDealer.errors && f.margeDealer.dirty">
               <label id="marge-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
@@ -102,7 +102,7 @@
         <div class="col-md-6">
           <div class="form-group mb-2">
             <label>Prix P.</label>
-            <input class="form-control" onkeypress="return false;" formControlName="priceParticular" type="number" id="price_particular" 
+            <input class="form-control" onkeypress="return false;" min="0" formControlName="priceParticular" type="number" id="price_particular" 
                    placeholder="">
             <div *ngIf="f.priceParticular.errors && f.priceParticular.dirty">
               <label id="price-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
@@ -112,7 +112,7 @@
         <div class="col-md-6">
           <div class="form-group mb-2">
             <label>Marge P.</label>
-            <input class="form-control" formControlName="margeParticular" type="number" (ngModelChange)="onChangeMargeParticular($event)" id="marge_particular"
+            <input class="form-control" formControlName="margeParticular" min="0" type="number" (ngModelChange)="onChangeMargeParticular($event)" id="marge_particular"
                    placeholder="Ajouter une marge">
             <div *ngIf="f.margeParticular.errors && f.margeParticular.dirty">
               <label id="marge-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
@@ -126,7 +126,7 @@
         <div class="col-md-6">
           <div class="form-group mb-4">
             <label>Quantité disponible(s)</label>
-            <input class="form-control" formControlName="stock" type="number" id="stock" name="stock"
+            <input class="form-control" formControlName="stock" type="number" min="0" id="stock" name="stock"
                    placeholder="Ajouter la quantité disponible">
             <div *ngIf="f.stock.errors && f.stock.dirty">
               <label id="qty-error" class="help-block error">Ce champ est obligatoire.</label>
