--- a/src/app/pages/supplier/articles/edit-article/edit-article.component.html
+++ b/src/app/pages/supplier/articles/edit-article/edit-article.component.html
@@ -44,7 +44,7 @@
             <div class="col-md-6">
               <div class="form-group mb-4">
                 <label>Prix de revient</label>
-                <input class="form-control" formControlName="price" (ngModelChange)="onChangePrice($event)" type="number" id="price"
+                <input class="form-control" formControlName="price" min="0" (ngModelChange)="onChangePrice($event)" type="number" id="price"
                        placeholder="Ajouter un prix en AR">
                 <div *ngIf="f.price.errors && f.price.dirty">
                   <label id="price-error" class="help-block error">Ce champ est obligatoire.</label>
@@ -58,7 +58,7 @@
             <div class="col-sm-6">
               <div class="form-group mb-4">
                 <label>Prix de vente UF</label>
-                <input class="form-control" onkeypress="return false;" formControlName="pricePro" type="number" id="price_uf"
+                <input class="form-control" onkeypress="return false;" min="0" formControlName="pricePro" type="number" id="price_uf"
                        placeholder="">
                 <p class="help-block font-11">Le prix est en Ariary</p>
               </div>
@@ -66,7 +66,7 @@
             <div class="col-sm-6">
               <div class="form-group mb-4">
                 <label>Marge</label>
-                <input class="form-control" formControlName="marge" (ngModelChange)="onChangeMarge($event)" type="number" id="marge"
+                <input class="form-control" formControlName="marge" min="0" (ngModelChange)="onChangeMarge($event)" type="number" id="marge"
                        placeholder="Ajouter une marge">
                 <div *ngIf="f.marge.errors && f.marge.dirty">
                   <label id="marge-error" class="help-block error">Ce champ est obligatoire.</label>
@@ -82,7 +82,7 @@
         <div class="col-md-6">
           <div class="form-group mb-4">
             <label>Prix R.</label>
-            <input class="form-control" onkeypress="return false;" formControlName="priceDealer" type="number" id="price_dealer"
+            <input class="form-control" onkeypress="return false;" min="0" formControlName="priceDealer" type="number" id="price_dealer"
                    placeholder="Ajouter un prix en AR">
             <div *ngIf="f.priceDealer.errors && f.priceDealer.dirty">
               <label id="price-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
@@ -92,7 +92,7 @@
         <div class="col-md-6">
           <div class="form-group mb-4">
             <label>Marge R.</label>
-            <input class="form-control" formControlName="margeDealer" type="number" (ngModelChange)="onChangeMargeDealer($event)" id="marge_dealer"
+            <input class="form-control" formControlName="margeDealer" min="0" type="number" (ngModelChange)="onChangeMargeDealer($event)" id="marge_dealer"
                    placeholder="Ajouter une marge">
             <div *ngIf="f.margeDealer.errors && f.margeDealer.dirty">
               <label id="marge-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
@@ -106,7 +106,7 @@
         <div class="col-md-6">
           <div class="form-group mb-2">
             <label>Prix P.</label>
-            <input class="form-control" onkeypress="return false;" formControlName="priceParticular" type="number" id="price_particular" 
+            <input class="form-control" onkeypress="return false;" min="0" formControlName="priceParticular" type="number" id="price_particular" 
                    placeholder="">
             <div *ngIf="f.priceParticular.errors && f.priceParticular.dirty">
               <label id="price-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
@@ -116,7 +116,7 @@
         <div class="col-md-6">
           <div class="form-group mb-2">
             <label>Marge P.</label>
-            <input class="form-control" formControlName="margeParticular" type="number" (ngModelChange)="onChangeMargeParticular($event)" id="marge_particular"
+            <input class="form-control" formControlName="margeParticular" min="0" type="number" (ngModelChange)="onChangeMargeParticular($event)" id="marge_particular"
                    placeholder="Ajouter une marge">
             <div *ngIf="f.margeParticular.errors && f.margeParticular.dirty">
               <label id="marge-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
@@ -129,7 +129,7 @@
         <div class="col-md-6">
           <div class="form-group mb-4">
             <label>Quantité disponible(s)</label>
-            <input class="form-control" formControlName="stock" type="number" id="stock" name="stock"
+            <input class="form-control" formControlName="stock" min="0" type="number" id="stock" name="stock"
                    placeholder="Ajouter la quantité disponible">
             <div *ngIf="f.stock.errors && f.stock.dirty">
               <label id="qty-error" class="help-block error">Ce champ est obligatoire.</label>
