--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -14,6 +14,12 @@
     </a>
   </li>
   <li routerLinkActive="active">
+    <a [routerLink]="['/carousel']" routerLinkActive="active">
+      <i class="sidebar-item-icon ti-layout-media-center"></i>
+      Slider
+    </a>
+  </li>
+  <li routerLinkActive="active">
     <a href="href=&quot;javascript:;&quot;">
       <i class="sidebar-item-icon ti-layout-tab-window"></i>
       <span class="nav-label">Fournisseurs</span>
