--- a/src/app/pages/carousel/carousel.component.html
+++ b/src/app/pages/carousel/carousel.component.html
@@ -7,8 +7,8 @@
           <div class="flexbox-b mb-5 mt-5">
             <span class="mr-4 static-badge badge-pink"><i class="ti-layout-media-center font-36"></i></span>
             <div>
-              <h5 class="font-strong">Carousel</h5>
-              <div class="text-light">Les fournisseurs qui possedent des articles en revision</div>
+              <h5 class="font-strong">Slider</h5>
+              <div class="text-light"></div>
             </div>
           </div>
         </div>
