--- a/src/app/pages/clients/clients.component.html
+++ b/src/app/pages/clients/clients.component.html
@@ -69,7 +69,7 @@
             <div class="form-group mb-4">
               <p class="font-strong">Statut</p>
               <select class="form-control" formControlName="status">
-                <option value="">En attente</option>
+                <option value="pending">En attente</option>
                 <option value="0">Active</option>
                 <option value="1">Désactiver</option>
               </select>
