--- a/src/app/components/modulo-review-suppliers/modulo-review-suppliers.component.html
+++ b/src/app/components/modulo-review-suppliers/modulo-review-suppliers.component.html
@@ -20,7 +20,7 @@
   </div>
 </div>
 
-<div class="modal fade" id="send-mail-modal">
+<div class="modal fade" id="send-mail-modal" data-backdrop="static">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <app-review-mail-supplier  [supplier]="selectedSupplier"></app-review-mail-supplier>
