--- a/src/app/pages/supplier/review-supplier/review-supplier.component.html
+++ b/src/app/pages/supplier/review-supplier/review-supplier.component.html
@@ -5,7 +5,7 @@
 </style>
 <div class="page-content fade-in-up">
 
-  <div class="modal fade" id="send-mail-modal">
+  <div class="modal fade" id="send-mail-modal" data-backdrop="static">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <app-review-mail-supplier  [supplier]="selectedSupplier"></app-review-mail-supplier>
