--- a/src/app/components/type-client-switcher/type-client-switcher.component.html
+++ b/src/app/components/type-client-switcher/type-client-switcher.component.html
@@ -11,10 +11,10 @@
     <div class="row">
       <div class="col-md-12">
         <div class="form-group mb-4">
-          <p class="font-strong">Professionnel(UF) / Revendeur</p>
+          <p class="font-strong">Utilisateur final / Revendeur</p>
           <select class="form-control" formControlName="type">
             <option value="">En attente</option>
-            <option value="professional">Professionnel</option>
+            <option value="professional">Utilisateur final</option>
             <option value="dealer">Revendeur</option>
           </select>
         </div>
