--- a/src/app/pages/clients/clients.component.html
+++ b/src/app/pages/clients/clients.component.html
@@ -70,7 +70,7 @@
               <p class="font-strong">Statut</p>
               <select class="form-control" formControlName="status">
                 <option value="pending">En attente</option>
-                <option value="0">Active</option>
+                <option value="0">Actif</option>
                 <option value="1">Désactiver</option>
               </select>
             </div>
