--- a/src/app/pages/clients/edit-client/edit-client.component.html
+++ b/src/app/pages/clients/edit-client/edit-client.component.html
@@ -65,7 +65,7 @@
           <div class="row" *ngIf="clientRole === 'fz-company'">
             <div class="col-md-12">
               <div class="form-group mb-4">
-                <label class="font-light">Professionnel ou Revendeur ?</label>
+                <label class="font-light">Utilisateur final/Revendeur  ?</label>
                 <ng-select name="company_status" placeholder="Veuillez selectionner" formControlName="company_status"
                   bindLabel="label" bindValue="value" [hideSelected]="false" [multiple]="false" [items]="Status"
                   required>
