--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -84,6 +84,12 @@
     </a>
   </li>
   <li routerLinkActive="active">
+    <a [routerLink]="['/faq-client']" routerLinkActive="active" >
+      <i class="sidebar-item-icon ti-help-alt"></i>
+      <span class="nav-label">FAQ Client</span>
+    </a>
+  </li>
+  <li routerLinkActive="active">
     <a routerLinkActive="active" routerLink="/settings">
       <i class="sidebar-item-icon ti-settings"></i>
       <span class="nav-label">Paramètres</span>
