--- a/src/app/pages/faq-client/faq-clients/faq-clients.component.html
+++ b/src/app/pages/faq-client/faq-clients/faq-clients.component.html
@@ -1,3 +1,33 @@
-<p>
-  faq-clients works!
-</p>
+<div class="page-content fade-in-up">
+  <div class="ibox">
+    <div class="ibox-body">
+      <h5 class="font-strong mb-4">LES F.A.Q</h5>
+      <div class="flexbox mb-4">
+        <div class="flexbox">
+        </div>
+        <div class="flexbox">
+          <div class="input-group-icon input-group-icon-left mr-3">
+            <span class="input-icon input-icon-right font-16"><i class="ti-search"></i></span>
+            <input class="form-control form-control-rounded form-control-solid" id="key-search" type="text"
+              placeholder="Search ...">
+          </div>
+          <a class="btn btn-rounded btn-primary btn-air" [routerLink]="['/faq-client', 'add']"
+            routerLinkActive="router-link-active">Ajouter une article FAQ</a>
+        </div>
+      </div>
+      <div class="table-responsive row">
+        <table class="table table-bordered table-hover" id="client-faq-table">
+          <thead class="thead-default thead-lg">
+            <tr>
+              <th>ID</th>
+              <th>Titre</th>
+              <th>Catégorie</th>
+              <th>Date d'ajout</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
