--- a/src/app/pages/quotation/quotation-custom/quotation-custom.component.html
+++ b/src/app/pages/quotation/quotation-custom/quotation-custom.component.html
@@ -1,4 +1,4 @@
-<table class="table table-hover" id="quotation-treaty-table">
+<table class="table table-hover" id="quotation-{{Balise}}-table">
   <thead class="thead-default thead-lg">
       <tr>
           <th class="pl-4">ID</th>
