--- a/src/app/pages/quotation/quotation-edit/quotation-edit.component.html
+++ b/src/app/pages/quotation/quotation-edit/quotation-edit.component.html
@@ -62,6 +62,29 @@
             </thead>
           </table>
         </div>
+        <div>
+          <form [formGroup]="formDiscount" (ngSubmit)="onUpdateDiscount()" id="form-discount">
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="form-group">
+                    <label>Remis en %</label>
+                    <div class="input-group">
+                        <input class="form-control" formControlName="discount" type="number" placeholder="Remise en %">
+                        <span class="input-group-btn">
+                            <button class="btn btn-outline-secondary" type="submit">Mette à jour</button>
+                        </span>
+                    </div>
+                  
+                  <p class="help-block font-11">
+                    Ce champ permet de modifier la remise pour cette article dans la demande
+                  </p>
+                </div>
+              </div>
+              <div class="col-sm-6">
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
       <div class="modal-footer justify-content-between bg-primary-50">
         <div>
