--- a/src/app/pages/supplier/edit-supplier/edit-supplier.component.html
+++ b/src/app/pages/supplier/edit-supplier/edit-supplier.component.html
@@ -13,7 +13,7 @@
             <div class="col-12">
                 <div class="page-heading mb-4">
                     <h1 class="page-title">Modifier le fournisseur
-                      <a class="btn btn-sm btn-dark" [routerLink]="['/supplier', 'new']" routerLinkActive="active" >Ajouter une nouvelle fournisseur</a>
+                      <a class="btn btn-sm btn-dark" [routerLink]="['/supplier', 'new']" routerLinkActive="active" >Ajouter un nouveau fournisseur</a>
                     </h1>
                 </div>
             </div>
